# SWG-ClientMaster3

./: .gitignore  CMakeLists.txt  README.md
docs/: 3dsMax2022Exporter.md  TerrainEditorModernizationPlan.md  swg_super_tool.md
docs/graphics/: direct3d9ex.md  directx10-integration.md
src/engine/client/application/Direct3d9/src/win32/: ConfigDirect3d9.cpp  ConfigDirect3d9.h  Direct3d9.cpp  Direct3d9.h  Direct3d9ExSupport.h  Direct3d9_StaticIndexBufferData.cpp  Direct3d9_StaticVertexBufferData.cpp  Direct3d9_TextureData.cpp
src/engine/client/application/Direct3d9Ex/src/win32/: Direct3d9ExSupport.cpp  Direct3d9ExSupport.h
src/engine/client/application/Headless/src/shared/: Headless.cpp  Headless.h
src/engine/client/application/TerrainEditor/src/win32/: FirstTerrainEditor.h  GuidedCreationView.cpp  GuidedCreationView.h  MapView.cpp  MapView.h  Resource.h  SmartTerrainAnalyzer.cpp  SmartTerrainAnalyzer.h  TerrainEditor.cpp  TerrainEditor.h  TerrainEditor.rc  TerrainEditorDoc.cpp  TerrainEditorDoc.h  TerrainEditorWinMain.cpp  View3dView.cpp  View3dView.h
src/engine/client/application/UiBuilder/: DefaultObjectPropertiesManager.h  DesignAssistant.cpp  DesignAssistant.h  MainFrm.cpp  ReadMe.txt  UiBuilder.rc
src/engine/client/application/Viewer/src/win32/: ContentCreationAssistantDialog.cpp  ContentCreationAssistantDialog.h  DialogMapAnimation.h  FirstViewer.h  MainFrm.cpp  MainFrm.h  ViewerDoc.cpp  ViewerDoc.h  resource.h  viewer.rc
src/engine/shared/application/TreeFileBuilder/src/shared/: TreeFileBuilder.cpp  TreeFileBuilder.dox
src/engine/shared/application/TreeFileRspBuilder/src/win32/: TreeFileRspBuilder.cpp
src/engine/shared/plugin/: PluginAPI.h
src/game/client/application/SwgClient/src/win32/: ClientMain.cpp  SwgClient.rc  WinMain.cpp
src/game/client/application/SwgClientSetup/src/win32/: ClientMachine.cpp  ClientMachine.h  Options.cpp  Options.h  PageGraphics.cpp  PageGraphics.h  SwgClientSetup.cpp  SwgClientSetup.rc  resource.h
tools/: SWG_MSHFullExporter.ms  SWG_MSHImporter.ms  SWG_SuperTool.ms  TreeFileBuilderGui.py  swg_max_exporter.ms
tools/swg-tool/: README.md
tools/swg-tool/swg_tool/: cli.py  treebuilder.py
tools/swg-tool/tests/: test_cli.py  test_treebuilder.py
